# korean-heritage-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  culture_data.py  heritage_list.csv  heritage_map.html  pyproject.toml
docs/: API_SOURCES.md  CHANGELOG.md  DEPLOYMENT.md  MCP_TOOLS.md  PLAYMCP_REGISTRATION.md  PRD.md  PROJECT.md  TEST_CASES.md  USER_FLOW.md
scripts/: check_environment.py  run_local.sh
src/kakao_heritage/: __init__.py  __main__.py  config.py  exceptions.py  server.py
src/kakao_heritage/clients/: heritage_api.py  heritage_geospatial_api.py  kakao_local_api.py
src/kakao_heritage/models/: common.py  facility.py  heritage.py  location.py  trip.py
src/kakao_heritage/parsers/: __init__.py  heritage_xml.py  natural_query.py
src/kakao_heritage/services/: designation_service.py  distance_service.py  heritage_codes.py  trip_service.py
src/kakao_heritage/tools/: __init__.py  designation.py  detail.py  facilities.py  location.py  nearby.py  query_parser.py  search.py  trip.py
src/kakao_heritage/utils/: map_links.py
tests/fixtures/: heritage_detail.xml  heritage_list.xml  kakao_address.json  kakao_keyword.json
tests/integration/: test_mcp_tools.py
tests/unit/: test_config.py  test_designation_service.py  test_distance_service.py  test_geospatial_api_client.py  test_heritage_xml.py  test_kakao_place.py  test_map_links.py  test_nearby_tool.py  test_playmcp_metadata.py  test_query_parser.py  test_search_tool.py  test_trip_service.py
