[project]
name = "kakao-heritage-mcp"
version = "0.1.0"
description = "Kakao Heritage MCP server for Korean heritage discovery and trip planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "xmltodict",
  "tenacity",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",
  "ruff",
  "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kakao_heritage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
exclude = [".history", ".venv"]
